--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -17,6 +17,8 @@ cxx_compiler_version:   # [osx]
 
 MACOSX_SDK_VERSION:  # [osx and x86_64]
   - 10.12            # [osx and x86_64]
+CONDA_BUILD_SYSROOT:  # [osx and x86_64]
+  - /opt/MacOSX10.14.sdk        # [osx and x86_64]
 
 dummy_var:              # [osx]
   - 0                   # [osx and x86_64]
