--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -8,11 +8,9 @@ c_compiler:
   - vs2017           # [win]
 vc:
   - 14
-c_compiler_version:     # [osx]
-  - "11.0.0"            # [osx and arm64]
+c_compiler_version:     # [osx and x86_64]
   - "10.0.0"            # [osx and x86_64]
-cxx_compiler_version:   # [osx]
-  - "11.0.0"            # [osx and arm64]
+cxx_compiler_version:   # [osx and x86_64]
   - "10.0.0"            # [osx and x86_64]
 
 MACOSX_SDK_VERSION:  # [osx and x86_64]
