--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,12 @@ build:
     - libstdcxx-ng
   missing_dso_whitelist:
     - /usr/lib/libc++abi.dylib
+    - /lib64/libpthread.so.0  # [linux]
+    - /lib64/libc.so.6        # [linux]
+    - /lib64/ld64.so.2        # [linux]
+    - /lib64/libgcc_s.so.1    # [linux]
+    - /lib64/ld-linux-aarch64.so.1  # [linux]
+    - /lib64/ld-linux-x86-64.so.2   # [linux]
 
 requirements:
   build:
