--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -97,6 +97,13 @@ outputs:
   - name: libcxxabi
     build:
       skip: true  # [not linux]
+      missing_dso_whitelist:
+        - /lib64/libpthread.so.0
+        - /lib64/libc.so.6
+        - /lib64/ld64.so.2
+        - /lib64/libgcc_s.so.1
+        - /lib64/ld-linux-aarch64.so.1
+        - /lib64/ld-linux-x86-64.so.2
     files:
       - lib/libc++abi.*
     requirements:
