--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -9,6 +9,10 @@ cxx_compiler:
 vc:
   - 14
 
+c_compiler_version:     # [osx and x86_64]
+  - "12.0.0"            # [osx and x86_64]
+cxx_compiler_version:   # [osx and x86_64]
+  - "12.0.0"            # [osx and x86_64]
 # libcxx only supports the last released GCC version, see
 # https://releases.llvm.org/13.0.0/projects/libcxx/docs/index.html#platform-and-compiler-support
 c_compiler_version:     # [linux]
@@ -18,6 +22,8 @@ cxx_compiler_version:   # [linux]
 
 MACOSX_SDK_VERSION:  # [osx and x86_64]
   - 10.14            # [osx and x86_64]
+CONDA_BUILD_SYSROOT:  # [osx and x86_64]
+  - /opt/MacOSX10.14.sdk        # [osx and x86_64]
 
 dummy_var:              # [osx]
   - 0                   # [osx and x86_64]
