--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ package:
   version: {{ version }}
 
 source:
-  - url: https://github.com/llvm/llvm-project/archive/refs/tags/llvmorg-{{ version.replace(".rc", "-rc") }}.tar.gz
+  - url: https://github.com/llvm/llvm-project/releases/download/llvmorg-{{ version.replace(".rc", "-rc") }}/llvm-project-{{ version.replace(".rc", "rc") }}.src.tar.xz
     sha256: 58a8818c60e6627064f312dbf46c02d9949956558340938b71cf731ad8bc0813
     patches:
       - patches/0001-Support-legacy-standalone-builds.patch
@@ -44,11 +44,9 @@ requirements:
     - cmake
     - ninja
     - {{ compiler('cxx') }}
-    - {{ stdlib('c') }}       # [not osx]
-    # use sys_abi as selector, so smithy breaks up CI jobs
-    - {{ stdlib('c') }}       # [osx and (sys_abi == "pre-12")]
-    - {{ stdlib('c') }}       # [osx and (sys_abi == "post-12")]
-    - python >3               # [not osx]
+    - python                  # [not osx]
+    - patch                   # [unix]
+    - m2-patch                # [win]
   host:
     - clangdev {{ version }}  # [not osx]
     - llvmdev {{ version }}   # [not osx]
@@ -67,16 +65,10 @@ outputs:
     requirements:
       build:
         - {{ compiler('cxx') }}
-        - {{ stdlib('c') }}
       host:
+        - {{ pin_subpackage("libcxxabi", exact=True) }}    # [linux]
       run:
         - {{ pin_subpackage("libcxxabi", exact=True) }}    # [linux]
-      run_constrained:
-        - __osx <12                                        # [osx and (sys_abi == "pre-12")]
-        - sysroot_{{ target_platform }} >={{ c_stdlib_version }}    # [linux]
-
-    # package for old sys_abi is not installable on macOS-12 image anymore
-    {% if sys_abi != "pre-12" %}
     test:
       requires:
         - clang                  # [osx]
@@ -97,11 +89,6 @@ outputs:
         - test -f $PREFIX/include/c++/v1/iterator                 # [unix]
         - bash compile_test.sh                                    # [unix]
         - compile_test.bat                                        # [win]
-        # make sure we inserted link to our docs wherever it is necessary;
-        # i.e. everywhere there's a string "availability(macos,...,introduced=<ver>)" for osx version >10.13;
-        # 'grep -v' inverts the match but returns non-zero exit code if no lines are returned; so we use 'wc -l';
-        # we want to have zero lines that don't either: contain our link or are for <=10.13 (lowest occurring in that file is 10.9)
-        - if [ 0 -eq $(cat ${PREFIX}/include/c++/v1/__availability | grep "availability(macos" | grep -vE "(conda-forge|10.9|10.1[0-3])" | wc -l) ]; then exit 0; else exit 1; fi  # [osx]
         # !!!!!!!!!!!! README !!!!!!!!!!!!!!!!!!
         # we do not ship libcxxabi on OSX - this breaks exception passing
         - if [ -f $PREFIX/lib/libc++abi.dylib ]; then exit 1; fi  # [osx]
@@ -109,22 +96,10 @@ outputs:
 
       # Following 2 projects had issues with libc++, so check them
       # before releasing just to be sure.
-      downstreams:              # [osx]
-        - python-symengine      # [osx]
-        - openturns             # [osx]
-        # test current libcxx against old clang builds;
-        # version correspondence is 0.{{ CLANG_MAJOR }}
-        # these tests are unusual in that they use -Wl,-rpath, but not -L.
-        # we'd need the pre-12 system libcxx, but azure deleted the macOS-11 image
-        - libcxx-testing 0.18   # [osx]
-        - libcxx-testing 0.17   # [osx]
-        - libcxx-testing 0.16   # [osx]
-        - libcxx-testing 0.15   # [osx]
-        - libcxx-testing 0.14   # [osx]
-        - libcxx-testing 0.13   # [osx]
-        - libcxx-testing 0.12   # [osx]
-        - libcxx-testing 0.11   # [osx]
-    {% endif %}
+      # downstreams:   # [osx]
+      #  - python-symengine  # [osx]
+      #  - openturns         # [osx]
+      #  - libcxx-testing    # [osx]
 
   - name: libcxxabi
     build:
@@ -146,12 +121,13 @@ outputs:
         - test -f $PREFIX/lib/libc++abi.so  # [linux]
 
 about:
-  home: http://libcxx.llvm.org/
+  home: https://libcxx.llvm.org/
   license: Apache-2.0 WITH LLVM-exception
   license_file: libcxx/LICENSE.TXT
   license_family: Apache
   summary: LLVM C++ standard library
   dev_url: https://github.com/llvm/llvm-project
+  doc_url: https://libcxx.llvm.org/
 
 extra:
   recipe-maintainers:
