Fix merge issues
Signed-off-by: scott hain <shain@anaconda.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,9 @@
-<<<<<<< HEAD
-{% set version = "14.0.6" %}
-=======
 {% set version = "17.0.6" %}
 {% set major = version.split(".")[0] %}
 
 {% if sys_abi is undefined %}
 {% set sys_abi = "dummy" %}
 {% endif %}
->>>>>>> forge/17.x
 
 package:
   name: libcxx_and_libcxxabi
@@ -15,32 +11,6 @@ package:
 
 source:
   - url: https://github.com/llvm/llvm-project/releases/download/llvmorg-{{ version.replace(".rc", "-rc") }}/llvm-project-{{ version.replace(".rc", "rc") }}.src.tar.xz
-<<<<<<< HEAD
-    sha256: 8b3cfd7bc695bd6cea0f37f53f0981f34f87496e79e2529874fd03a2f9dd3a8a
-    patches:
-      - patches/0001-libcxxabi-10.9-compatibility.patch  # [osx and x86_64]
-      - patches/0002-Support-legacy-standalone-builds.patch
-      # See https://lists.llvm.org/pipermail/libcxx-dev/2021-July/001172.html
-      - patches/0003-Fix-ABI-compatibility-with-system.patch
-      - patches/0004-custom-error-message-for-old-sdk.patch
-
-build:
-  number: 0
-  skip: true  # [win]
-  skip: True  # [linux and s390x]
-  skip: True  # [py<30]
-
-  ignore_run_exports:
-    - libstdcxx-ng
-  missing_dso_whitelist:
-    - /usr/lib/libc++abi.dylib
-    - /lib64/libpthread.so.0  # [linux]
-    - /lib64/libc.so.6        # [linux]
-    - /lib64/ld64.so.2        # [linux]
-    - /lib64/libgcc_s.so.1    # [linux]
-    - /lib64/ld-linux-aarch64.so.1  # [linux]
-    - /lib64/ld-linux-x86-64.so.2   # [linux]
-=======
     sha256: 58a8818c60e6627064f312dbf46c02d9949956558340938b71cf731ad8bc0813
     patches:
       - patches/0001-Support-legacy-standalone-builds.patch
@@ -54,108 +24,96 @@ build:
       - patches/0004-Revert-libc-Remove-workaround-for-C11-features-on-co.patch
 
 build:
-  number: 6
+  number: 0
   skip: true  # [win]
-  skip: true  # [ppc64le or aarch64]
+  skip: True  # [linux and s390x]
 
-# use selectors here so smithy breaks up CI jobs
-# [sys_abi]
->>>>>>> forge/17.x
+  ignore_run_exports:
+    - libstdcxx-ng
+  missing_dso_whitelist:
+    - /usr/lib/libc++abi.dylib
+    - /lib64/libpthread.so.0  # [linux]
+    - /lib64/libc.so.6        # [linux]
+    - /lib64/ld64.so.2        # [linux]
+    - /lib64/libgcc_s.so.1    # [linux]
+    - /lib64/ld-linux-aarch64.so.1  # [linux]
+    - /lib64/ld-linux-x86-64.so.2   # [linux]
 
 requirements:
   build:
     - cmake
-<<<<<<< HEAD
+    - ninja
     - make                    # [unix]
-    - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - {{ compiler('c') }}
     - python                  # [not osx]
     - patch                   # [unix]
     - m2-patch                # [win]
-=======
-    - ninja
-    - {{ compiler('cxx') }}
-    - {{ compiler('c') }}
-    - {{ stdlib('c') }}
-    - python >3               # [not osx]
->>>>>>> forge/17.x
   host:
     - clangdev {{ version }}  # [not osx]
     - llvmdev {{ version }}   # [not osx]
 
 outputs:
-  - name: libcxx-devel
-    files:
-<<<<<<< HEAD
-      - include/c++
-      - Library/include/c++
-      - lib/libc++.*
-      - lib/libc++fs.*
-      - lib/libc++experimental.*
-      - Library/bin/c++*.dll
-      - Library/lib/c++*.lib
-      - Library/lib/libc++*.lib
-    requirements:
-      build:
-=======
-      - include/c++                 # [unix]
-      - Library/include/c++         # [win]
-    requirements:
-      host:
-        - {{ pin_subpackage("libcxx", exact=True) }}
-      run:
-        - {{ pin_subpackage("libcxx", max_pin=None) }}
-      run_constrained:
-        - __osx <12     # [osx and (sys_abi == "pre-12")]
+  # - name: libcxx-devel
+  #   files:
+  #     - include/c++                 # [unix]
+  #     - Library/include/c++         # [win]
+  #   requirements:
+  #     host:
+  #       - {{ pin_subpackage("libcxx", exact=True) }}
+  #     run:
+  #       - {{ pin_subpackage("libcxx", max_pin=None) }}
+  #     run_constrained:
+  #       - __osx <12     # [osx and (sys_abi == "pre-12")]
 
-    # package for old sys_abi is not installable on macOS-12 image anymore
-    {% if sys_abi != "pre-12" %}
-    test:
-      requires:
-        - clang                  # [osx]
-        - clangxx
-        - ld64                   # [osx]
-        - cctools                # [osx]
-        - llvm-tools             # [osx]
-        - {{ compiler('cxx') }}  # [not osx]
-      files:
-        - test_sources
-        - compile_test.sh   # [unix]
-        - compile_test.bat  # [win]
-      commands:
-        # Dummy var for different hashes
-        - echo {{ dummy_var }}                                    # [osx]
-        - echo {{ sys_abi }}                                      # [osx]
-        - if not exist %LIBRARY_INC%\\c++\\v1\\iterator exit 1    # [win]
-        - test -f $PREFIX/include/c++/v1/iterator                 # [unix]
-        - bash compile_test.sh                                    # [unix]
-        - compile_test.bat                                        # [win]
-        # make sure we inserted link to our docs wherever it is necessary;
-        # i.e. everywhere there's a string "availability(macos,...,introduced=<ver>)" for osx version >10.13;
-        # 'grep -v' inverts the match but returns non-zero exit code if no lines are returned; so we use 'wc -l';
-        # we want to have zero lines that don't either: contain our link or are for <=10.13 (lowest occurring in that file is 10.9)
-        - if [ 0 -eq $(cat ${PREFIX}/include/c++/v1/__availability | grep "availability(macos" | grep -vE "(conda-forge|10.9|10.1[0-3])" | wc -l) ]; then exit 0; else exit 1; fi  # [osx]
-        # !!!!!!!!!!!! README !!!!!!!!!!!!!!!!!!
-        # we do not ship libcxxabi on OSX - this breaks exception passing
-        - if [ -f $PREFIX/lib/libc++abi.dylib ]; then exit 1; fi  # [osx]
-        - test -f $PREFIX/lib/libc++abi.so                        # [linux]
+  #   # package for old sys_abi is not installable on macOS-12 image anymore
+  #   {% if sys_abi != "pre-12" %}
+  #   test:
+  #     requires:
+  #       - clang                  # [osx]
+  #       - clangxx
+  #       - ld64                   # [osx]
+  #       - cctools                # [osx]
+  #       - llvm-tools             # [osx]
+  #       - {{ compiler('cxx') }}  # [not osx]
+  #     files:
+  #       - test_sources
+  #       - compile_test.sh   # [unix]
+  #       - compile_test.bat  # [win]
+  #     commands:
+  #       # Dummy var for different hashes
+  #       - echo {{ dummy_var }}                                    # [osx]
+  #       - echo {{ sys_abi }}                                      # [osx]
+  #       - if not exist %LIBRARY_INC%\\c++\\v1\\iterator exit 1    # [win]
+  #       - test -f $PREFIX/include/c++/v1/iterator                 # [unix]
+  #       - bash compile_test.sh                                    # [unix]
+  #       - compile_test.bat                                        # [win]
+  #       # make sure we inserted link to our docs wherever it is necessary;
+  #       # i.e. everywhere there's a string "availability(macos,...,introduced=<ver>)" for osx version >10.13;
+  #       # 'grep -v' inverts the match but returns non-zero exit code if no lines are returned; so we use 'wc -l';
+  #       # we want to have zero lines that don't either: contain our link or are for <=10.13 (lowest occurring in that file is 10.9)
+  #       - if [ 0 -eq $(cat ${PREFIX}/include/c++/v1/__availability | grep "availability(macos" | grep -vE "(conda-forge|10.9|10.1[0-3])" | wc -l) ]; then exit 0; else exit 1; fi  # [osx]
+  #       # !!!!!!!!!!!! README !!!!!!!!!!!!!!!!!!
+  #       # we do not ship libcxxabi on OSX - this breaks exception passing
+  #       - if [ -f $PREFIX/lib/libc++abi.dylib ]; then exit 1; fi  # [osx]
+  #       - test -f $PREFIX/lib/libc++abi.so                        # [linux]
 
-      # Following 2 projects had issues with libc++, so check them
-      # before releasing just to be sure.
-      downstreams:              # [osx]
-        - python-symengine      # [osx]
-        - openturns             # [osx]
-        # test current libcxx against old clang builds;
-        # version correspondence is 0.{{ CLANG_MAJOR }}.{{ LIBCXX_MAJOR }}
-        # these tests are unusual in that they use -Wl,-rpath, but not -L.
-        - libcxx-testing 0.17.{{ major }}   # [osx]
-        - libcxx-testing 0.16.{{ major }}   # [osx]
-        - libcxx-testing 0.15.{{ major }}   # [osx]
-        - libcxx-testing 0.14.{{ major }}   # [osx]
-        - libcxx-testing 0.13.{{ major }}   # [osx]
-        - libcxx-testing 0.12.{{ major }}   # [osx]
-        - libcxx-testing 0.11.{{ major }}   # [osx]
-    {% endif %}
+  #     # Following 2 projects had issues with libc++, so check them
+  #     # before releasing just to be sure.
+  #     downstreams:              # [osx]
+  #       - python-symengine      # [osx]
+  #       - openturns             # [osx]
+  #       # test current libcxx against old clang builds;
+  #       # version correspondence is 0.{{ CLANG_MAJOR }}.{{ LIBCXX_MAJOR }}
+  #       # these tests are unusual in that they use -Wl,-rpath, but not -L.
+  #       - libcxx-testing 0.17.{{ major }}   # [osx]
+  #       - libcxx-testing 0.16.{{ major }}   # [osx]
+  #       - libcxx-testing 0.15.{{ major }}   # [osx]
+  #       - libcxx-testing 0.14.{{ major }}   # [osx]
+  #       - libcxx-testing 0.13.{{ major }}   # [osx]
+  #       - libcxx-testing 0.12.{{ major }}   # [osx]
+  #       - libcxx-testing 0.11.{{ major }}   # [osx]
+  #   {% endif %}
 
   - name: libcxx
     build:
@@ -180,49 +138,12 @@ outputs:
       - Library/lib/libc++*.lib     # [win]
     requirements:
       build:
-        - {{ stdlib('c') }}
         - {{ compiler('c') }}
->>>>>>> forge/17.x
         - {{ compiler('cxx') }}
       host:
         - {{ pin_subpackage("libcxxabi", exact=True) }}    # [linux]
       run:
         - {{ pin_subpackage("libcxxabi", exact=True) }}    # [linux]
-<<<<<<< HEAD
-    test:
-      requires:
-        - clang                  # [osx]
-        - clangxx
-        - ld64                   # [osx]
-        - cctools                # [osx]
-        - compiler-rt            # [osx]
-        - llvm-tools             # [osx]
-        - {{ compiler('cxx') }}  # [not osx]
-      files:
-        - test_sources
-        - compile_test.sh   # [unix]
-        - compile_test.bat  # [win]
-      commands:
-        # Dummy var for different hashes
-        - echo {{ dummy_var }}                                    # [osx]
-        - if not exist %LIBRARY_INC%\\c++\\v1\\iterator exit 1    # [win]
-        - test -f $PREFIX/include/c++/v1/iterator                 # [unix]
-        - bash compile_test.sh                                    # [unix]
-        - compile_test.bat                                        # [win]
-        # !!!!!!!!!!!! README !!!!!!!!!!!!!!!!!!
-        # we do not ship libcxxabi on OSX - this breaks exception passing
-        - if [ -f $PREFIX/lib/libc++abi.dylib ]; then exit 1; fi  # [osx]
-        - test -f $PREFIX/lib/libc++abi.so                        # [linux]
-
-      # Following 2 projects had issues with libc++, so check them
-      # before releasing just to be sure.
-      # downstreams:   # [osx]
-      #  - python-symengine  # [osx]
-      #  - openturns         # [osx]
-      #  - libcxx-testing    # [osx]
-=======
-      run_constrained:
-        - sysroot_{{ target_platform }} >={{ c_stdlib_version }}    # [linux]
     test:
       commands:
         # presence of shared & static libraries
@@ -232,24 +153,21 @@ outputs:
         - test -f $PREFIX/lib/libc++experimental.a      # [unix]
         # absence of headers
         - test ! -d $PREFIX/include/c++                 # [unix]
->>>>>>> forge/17.x
 
   - name: libcxxabi
     build:
       skip: true  # [not linux]
-      missing_dso_whitelist:
-        - /lib64/libpthread.so.0
-        - /lib64/libc.so.6
-        - /lib64/ld64.so.2
-        - /lib64/libgcc_s.so.1
-        - /lib64/ld-linux-aarch64.so.1
-        - /lib64/ld-linux-x86-64.so.2
+      # missing_dso_whitelist:
+      #   - /lib64/libpthread.so.0
+      #   - /lib64/libc.so.6
+      #   - /lib64/ld64.so.2
+      #   - /lib64/libgcc_s.so.1
+      #   - /lib64/ld-linux-aarch64.so.1
+      #   - /lib64/ld-linux-x86-64.so.2
     files:
       - lib/libc++abi.*
     requirements:
       build:
-        # for run-exports
-        - {{ stdlib('c') }}
         - {{ compiler('c') }}
       run_constrained:
         - libcxx {{ version }}.*
@@ -258,22 +176,19 @@ outputs:
         - test -f $PREFIX/lib/libc++abi.so  # [linux]
 
 about:
-<<<<<<< HEAD
   home: https://libcxx.llvm.org/
-=======
-  home: http://libcxx.llvm.org/
->>>>>>> forge/17.x
   license: Apache-2.0 WITH LLVM-exception
   license_file: libcxx/LICENSE.TXT
   license_family: Apache
   summary: LLVM C++ standard library
   dev_url: https://github.com/llvm/llvm-project
-<<<<<<< HEAD
   doc_url: https://libcxx.llvm.org/
-=======
->>>>>>> forge/17.x
 
 extra:
+  skip-lints:
+    # there are false positives for these checks,
+    # for some of the individual outputs.
+    - missing_tests
   recipe-maintainers:
     - SylvainCorlay
     - inducer
