--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,19 +25,25 @@ source:
 
 build:
   number: 0
-  skip: true  # [win]
-  skip: True  # [linux and s390x]
+  #######
+  # TODO: Rewrite build scripts, removing cross-compilation and adding linux-native
+  # Right now this feedstock is set up to cross-compile linux builds on macos.
+  # Rather than remove the cross-compilation or modifying the entire feedstock to
+  # build natively on linux with the option to cross-compile, we're going make this
+  # osx only and revisit the retooling as its own effort or as part of a future update.
+  skip: true  # [not osx]
 
-  ignore_run_exports:
-    - libstdcxx-ng
-  missing_dso_whitelist:
-    - /usr/lib/libc++abi.dylib
-    - /lib64/libpthread.so.0  # [linux]
-    - /lib64/libc.so.6        # [linux]
-    - /lib64/ld64.so.2        # [linux]
-    - /lib64/libgcc_s.so.1    # [linux]
-    - /lib64/ld-linux-aarch64.so.1  # [linux]
-    - /lib64/ld-linux-x86-64.so.2   # [linux]
+  ### Forcing Failure
+  # ignore_run_exports:
+  #   - libstdcxx-ng
+  # missing_dso_whitelist:
+  #   - /usr/lib/libc++abi.dylib
+  #   - /lib64/libpthread.so.0  # [linux]
+  #   - /lib64/libc.so.6        # [linux]
+  #   - /lib64/ld64.so.2        # [linux]
+  #   - /lib64/libgcc_s.so.1    # [linux]
+  #   - /lib64/ld-linux-aarch64.so.1  # [linux]
+  #   - /lib64/ld-linux-x86-64.so.2   # [linux]
 
 requirements:
   build:
@@ -49,11 +55,15 @@ requirements:
     - python                  # [not osx]
     - patch                   # [unix]
     - m2-patch                # [win]
+    - llvm
   host:
     - clangdev {{ version }}  # [not osx]
-    - llvmdev {{ version }}   # [not osx]
+    - llvm {{ version }}   # [not osx]
 
 outputs:
+  #############
+  # leaving this out for the moment
+  #############
   # - name: libcxx-devel
   #   files:
   #     - include/c++                 # [unix]
@@ -156,7 +166,8 @@ outputs:
 
   - name: libcxxabi
     build:
-      skip: true  # [not linux]
+      skip: true
+      # skip: true  # [not linux]
       # missing_dso_whitelist:
       #   - /lib64/libpthread.so.0
       #   - /lib64/libc.so.6
