--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ source:
     patches:
       - patches/0001-Support-legacy-standalone-builds.patch
       # See https://discourse.llvm.org/t/shipping-custom-libc-on-macos/58606
-      - patches/0002-Fix-ABI-compatibility-with-system.patch    # [sys_abi == "pre-12"]
+      # - patches/0002-Fix-ABI-compatibility-with-system.patch    # [sys_abi == "pre-12"]
       - patches/0003-custom-error-message-for-old-sdk.patch
       # upstream removed fallbacks in case the underlying libc didn't support C11 in
       # https://github.com/llvm/llvm-project/commit/21f73d5826fb5024a27eaacafadfa316f58949c5;
@@ -95,7 +95,8 @@ outputs:
         # presence of shared & static libraries
         - test -f $PREFIX/lib/libc++.so                 # [linux]
         - test -f $PREFIX/lib/libc++.dylib              # [osx]
-        - test -f $PREFIX/lib/libc++.1.0.dylib
+        - test -f $PREFIX/lib/libc++.1.dylib            # [osx]
+        - test -f $PREFIX/lib/libc++.1.0.dylib          # [osx]
         - test -f $PREFIX/lib/libc++.a                  # [unix]
         - test -f $PREFIX/lib/libc++experimental.a      # [unix]
         # absence of headers
