--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -3,19 +3,33 @@ c_compiler:           # [osx]
 cxx_compiler:         # [osx]
   - clang_bootstrap   # [osx]
 
+# libcxx only supports the last released GCC version, see
+# https://libcxx.llvm.org/index.html#platform-and-compiler-support
 c_compiler_version:
-  - 11.2.0              # [linux]
+  - 12                  # [linux]
   - 17                  # [osx]
 cxx_compiler_version:
-  - 11.2.0              # [linux]
+  - 12                  # [linux]
   - 17                  # [osx]
 
 dummy_var:              # [osx]
   - 0                   # [osx and x86_64]
   - 1                   # [osx and arm64]
 
-# if you don't have the same version of the SDK,
-# substitute for something > 12 for local development
-# CONDA_BUILD_SYSROOT:
-#   - /Library/Developer/CommandLineTools/SDKs/MacOSX13.3.sdk
-  # - /Library/Developer/CommandLineTools/SDKs/MacOSX14.5.sdk
+# We don't have this in defaults yet either for linux-64:
+# sysroot_linux-64                2.17     h57e8cba_10  pkgs/main
+# this should be updated to the latests 2.x when that work is done.
+c_stdlib_version:           # [linux]
+  # actually would need >=2.24, but we don't have that in conda-forge yet
+  - "2.17"                  # [linux]
+  # w.r.t. to the ABI of the system libcxx, this would need to be 12.0 on macos
+  # but as we only publish one build to main, maintain global lower bounds
+
+# conda-forge built a version both for >12 and <12, we're going to constrain this as >=12
+# so we can avoid building 2 versions and patching everything.
+# References:
+# https://github.com/conda-forge/libcxx-feedstock/blob/17.x/recipe/conda_build_config.yaml#L28-L33
+# https://github.com/conda-forge/libcxx-feedstock/blob/17.x/recipe/meta.yaml#L17-L18
+macos_min_version:
+  - 10.15 # [osx and x86_64]
+  - 12    # [osx and arm64]
