--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ source:
     patches:
       - patches/0001-Support-legacy-standalone-builds.patch
       # See https://discourse.llvm.org/t/shipping-custom-libc-on-macos/58606
-      # - patches/0002-Fix-ABI-compatibility-with-system.patch    # [sys_abi == "pre-12"]
+      - patches/0002-Fix-ABI-compatibility-with-system.patch    # [sys_abi == "pre-12"]
       - patches/0003-custom-error-message-for-old-sdk.patch
       # upstream removed fallbacks in case the underlying libc didn't support C11 in
       # https://github.com/llvm/llvm-project/commit/21f73d5826fb5024a27eaacafadfa316f58949c5;
@@ -25,14 +25,9 @@ source:
 
 build:
   number: 0
-  #######
-  # TODO: Rewrite build scripts, removing cross-compilation and adding linux-native
-  # Right now this feedstock is set up to cross-compile linux builds on macos.
-  # Rather than remove the cross-compilation or modifying the entire feedstock to
-  # build natively on linux with the option to cross-compile, we're going make this
-  # osx only and revisit the retooling as its own effort or as part of a future update.
-  skip: true  # [not osx]
+  skip: true  # [win]
 
+  #TODO: does this even come in?
   ignore_run_exports:
     - libstdcxx-ng
   missing_dso_whitelist:
@@ -60,6 +55,15 @@ requirements:
     - llvm {{ version }}      # [not osx]
 
 outputs:
+
+  ######
+  # TODO: Evaluate when/if we want to split out libcxx-devel as its own package, as
+  # conda-forge did:
+  # https://github.com/conda-forge/libcxx-feedstock/blob/17.x/recipe/meta.yaml#L47
+
+  # Honestly not sure where the 'hardening' is used (or if) but leaving it here for
+  # consistency. There are also some comments in here that I think may be out of date
+  # but I haven't had a chance to check on them because they seem reasonable.
   - name: libcxx
     build:
       string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}        # [hardening == "none"]
@@ -73,6 +77,7 @@ outputs:
         # compiler('c'), and conda keeps that despite ignoring the cxx run-exports
         - {{ compiler('cxx') }}
     files:
+        # I'm not sure why windows is included here, I'm guessing experimental?
       - lib/libc++.so               # [linux]
       - lib/libc++.so.*             # [linux]
       - lib/libc++.dylib            # [osx]
@@ -90,8 +95,17 @@ outputs:
         - {{ pin_subpackage("libcxxabi", exact=True) }}    # [linux]
       run:
         - {{ pin_subpackage("libcxxabi", exact=True) }}    # [linux]
+      run_constrained:
+        - sysroot_{{ target_platform }} >={{ c_stdlib_version }}    # [linux]
     test:
+      files:
+        - test_sources
+        - compile_test.sh   # [unix]
+        - compile_test.bat  # [win]
       commands:
+        # These were taken from libcxx-devel in conda-forge, need to make sure they pass or are valuable
+        # - bash compile_test.sh                                    # [unix]
+        # - compile_test.bat                                        # [win]
         # presence of shared & static libraries
         - test -f $PREFIX/lib/libc++.so                 # [linux]
         - test -f $PREFIX/lib/libc++.dylib              # [osx]
@@ -104,14 +118,14 @@ outputs:
 
   - name: libcxxabi
     build:
-      # skip: true  # [not linux]
-      missing_dso_whitelist:
-        - /lib64/libpthread.so.0
-        - /lib64/libc.so.6
-        - /lib64/ld64.so.2
-        - /lib64/libgcc_s.so.1
-        - /lib64/ld-linux-aarch64.so.1
-        - /lib64/ld-linux-x86-64.so.2
+      skip: true  # [not linux]
+      # missing_dso_whitelist:
+      #   - /lib64/libpthread.so.0
+      #   - /lib64/libc.so.6
+      #   - /lib64/ld64.so.2
+      #   - /lib64/libgcc_s.so.1
+      #   - /lib64/ld-linux-aarch64.so.1
+      #   - /lib64/ld-linux-x86-64.so.2
     files:
       - lib/libc++abi.*
     requirements:
