--- a/abs.yaml
+++ b/abs.yaml
@@ -4,4 +4,4 @@ build_parameters:
 
 upload_without_merge: True
 upload_to_staging_channel_in_pr: True
-channels: [ llvmdev17 ]
+channels: [ llvmdev17-boot ]
