--- a/abs.yaml
+++ b/abs.yaml
@@ -3,5 +3,9 @@ build_parameters:
   - "--error-overlinking"
 
 upload_without_merge: True
-upload_to_staging_channel_in_pr: True
-channels: [ llvmdev17-boot ]
+
+upload_channels:
+  - llvm-17.0.6-stage0
+
+channels:
+  - llvm-17.0.6-stage0
