Add linux support.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,8 +29,6 @@ source:
 build:
   number: 0
   skip: true  # [win]
-  # I don't believe we can build this on linux with the sysroot we have
-  skip: true  # [linux]
   
   #TODO: does this even come in?
   ignore_run_exports:
@@ -49,15 +47,17 @@ requirements:
     - cmake
     - ninja
     - make                    # [unix]
-    - {{ compiler('cxx') }}
-    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}   # [not linux]
+    - {{ compiler('c') }}     # [not linux]
+    - clangxx                 # [linux]
+    - clang                   # [linux]
     - python                  # [not osx]
     - patch                   # [unix]
     - m2-patch                # [win]
     - llvm
   host:
-    - clangdev {{ bootstrap_version }}  # [not osx]
-    - llvm {{ bootstrap_version }}      # [not osx]
+    - clangdev {{ bootstrap_version }}
+    - llvm {{ bootstrap_version }}
 
 outputs:
 
@@ -82,7 +82,8 @@ outputs:
         - ld64                   # [osx]
         - cctools                # [osx]
         - llvm-tools             # [osx]
-        - {{ compiler('cxx') }}
+        - {{ compiler('cxx') }}  # [not osx and not linux]
+        - sysroot_{{ target_platform }}  # [linux]
       files:
         - test_sources
         - compile_test.sh   # [unix]
