Use fresh staging channel.

--- a/abs.yaml
+++ b/abs.yaml
@@ -2,10 +2,10 @@ build_parameters:
   - "--suppress-variables"
   - "--error-overlinking"
 
-staging_channel_upload_target: llvm-17.0.6-stage1
+staging_channel_upload_target: llvm-17.0.6-stage1-attempt-5
 
 channels:
-  - https://staging.continuum.io/prefect/llvm-17.0.6-stage1
+  - https://staging.continuum.io/prefect/llvm-17.0.6-stage1-attempt-5
   - llvm-17.0.6-stage0
 
 aggregate_check: false
