--- a/abs.yaml
+++ b/abs.yaml
@@ -2,9 +2,7 @@ build_parameters:
   - "--suppress-variables"
   - "--error-overlinking"
 
-staging_channel_upload_target: llvm-17.0.6-stage2
+staging_channel_upload_target: llvm-17.0.6-stage2-attempt-1
 
 channels:
-  - https://staging.continuum.io/prefect/llvm-17.0.6-stage1-attempt-5
-
-aggregate_check: false
+  - https://staging.continuum.io/prefect/llvm-17.0.6-stage2
